force-app/main/default/objects/Cambio_de_Fecha__c/Cambio_de_Fecha__c.object-meta.xml
<CustomObject>
    <description>Este objeto es para guardar la información de los aportes que se van actualizar o eliminar, de la pantalla VFpantallacambiofechaaporte y su controlador: Controllercambiofechaaporte.</description>
    <label>Cambio_de_Fecha</label>
    <nameField>
        <label>Nombre de Cambio_de_Fecha</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cambio_de_Fechas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>