force-app/main/default/objects/Cambio_de_Fecha__c/fields/Accion__c.field-meta.xml
<CustomField>
    <fullName>Accion__c</fullName>
    <description>La accion que desea realizar el usuario</description>
    <label>Accion</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>