force-app/main/default/objects/Cambio_de_Fecha__c/fields/Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Cuenta__c</fullName>
    <label>Cuenta</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>