force-app/main/default/objects/Cambio_de_Fecha__c/fields/Fechadeaporte__c.field-meta.xml
<CustomField>
    <fullName>Fechadeaporte__c</fullName>
    <label>Fechadeaporte</label>
    <required>true</required>
    <type>Date</type>
</CustomField>