force-app/main/default/objects/Cambio_de_Fecha__c/fields/Montopago__c.field-meta.xml
<CustomField>
    <fullName>Montopago__c</fullName>
    <label>Montopago</label>
    <length>15</length>
    <type>Text</type>
</CustomField>