force-app/main/default/objects/Cambio_de_Fecha__c/fields/Nombrecliente__c.field-meta.xml
<CustomField>
    <fullName>Nombrecliente__c</fullName>
    <label>Nombrecliente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>