force-app/main/default/objects/Cambio_de_Fecha__c/fields/NoMovimiento__c.field-meta.xml
<CustomField>
    <fullName>NoMovimiento__c</fullName>
    <label>NoMovimiento</label>
    <length>15</length>
    <type>Text</type>
</CustomField>