force-app/main/default/objects/Cambio_de_Fecha__c/fields/Nuevafecha__c.field-meta.xml
<CustomField>
    <fullName>Nuevafecha__c</fullName>
    <label>Nuevafecha</label>
    <type>Date</type>
</CustomField>