force-app/main/default/objects/Cambio_de_Fecha__c/fields/num_doc__c.field-meta.xml
<CustomField>
    <fullName>num_doc__c</fullName>
    <label>num_doc</label>
    <length>15</length>
    <type>Text</type>
</CustomField>