force-app/main/default/objects/Cambio_de_Fecha__c/fields/Obsevaciones__c.field-meta.xml
<CustomField>
    <fullName>Obsevaciones__c</fullName>
    <label>Obsevaciones</label>
    <length>255</length>
    <type>Text</type>
</CustomField>