force-app/main/default/objects/Cambio_de_Fecha__c/fields/Producto__c.field-meta.xml
<CustomField>
    <fullName>Producto__c</fullName>
    <label>Producto</label>
    <length>15</length>
    <type>Text</type>
</CustomField>