force-app/main/default/objects/Cambio_de_Fecha__c/fields/Tiposaldo__c.field-meta.xml
<CustomField>
    <fullName>Tiposaldo__c</fullName>
    <label>Tiposaldo</label>
    <length>10</length>
    <type>Text</type>
</CustomField>