force-app/main/default/objects/Cambio_de_Fecha__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Accion__c</columns>
    <columns>Cuenta__c</columns>
    <columns>Descripcion__c</columns>
    <columns>Fechadeaporte__c</columns>
    <columns>Moneda__c</columns>
    <columns>Montopago__c</columns>
    <columns>Nombrecliente__c</columns>
    <columns>NoMovimiento__c</columns>
    <columns>Nuevafecha__c</columns>
    <columns>num_doc__c</columns>
    <columns>Obsevaciones__c</columns>
    <columns>Producto__c</columns>
    <columns>Referencia__c</columns>
    <columns>Subproducto__c</columns>
    <columns>Tiposaldo__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>